fix: footer spacing

--- a/index.css
+++ b/index.css
@@ -155,12 +155,13 @@ h1 {
 
 footer {
     text-align: center;
-    margin: 3em;
+    margin: 2em 1em;
 }
 
 .footer-icon a {
     font-size: 1.25em;
-    padding: 0 0.25em;
+    padding: 0.25em;
+    margin: 0 0.5em;
 }
 
 .footer-icon {
@@ -232,6 +233,11 @@ footer a:hover {
         border-bottom-left-radius: 10px;
         border-bottom-right-radius: 10px;
         box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.25);
+    }
+
+    .footer-icon a {
+        font-size: 1.5em;
+        padding: 0.5em;
     }
 }
 
